--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,15 @@
 <!doctype html>
-    <html lang="fr" ng-app="routeApp">
-        <head>
-            <meta charset="utf-8" />
-            <title>Route App</title>        
-            <link rel="stylesheet" href="web/css/style.css">           
-            <script src="js/vendor/angular.js"></script>
-            <script src="js/vendor/angular-route.js"></script>
-            <script src="js/script.js"></script>
-        </head>
-        <form #dataContainer action="/action_page.php">
-            Nickname: <input type="text" name="fname"><br>
-            Password: <input type="text" name="pname"><br>
-            <input type="submit" value="Submit">
-          </form> 
-<body>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <title>Angular | ENI Service</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" >
+</head>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
